Enable saving XML file of data, update README to show how to make runtime include all necessary modules